--- a/DEMO/docker-compose.yml
+++ b/DEMO/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: php:apache
     volumes:
       - "./:/var/www/html"
+
     ports:
       - 8080:80
       - 443:443 #SSL Service
@@ -12,12 +13,12 @@ services:
   db: 
     image: mysql:latest
     environment:
-      - MYSQL_DATABASE=dbback #Ändern
+      - MYSQL_DATABASE=dbback
       - MYSQL_USER=php_docker
       - MYSQL_PASSWORD=password # this should live in a env var
       - MYSQL_ALLOW_EMPTY_PASSWORD=1 # equivalent to True
     volumes:
-      - "./db:/docker-entrypoint-initdb.d" # this is how we persist a sql db even when container stops
+      - "./docker/db:/docker-entrypoint-initdb.d" # this is how we persist a sql db even when container stops
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
@@ -25,4 +26,4 @@ services:
     environment:
       - PMA_HOST=db
       - PMA_PORT=3306
-
+      
